[project]
name = "lora_from_url"
description = "A simple-as-possible custom node for ComfyUI to load LoRA models from a public URL."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["requests>=2.31.0", "tqdm>=4.66.0"]

[project.urls]
Repository = "https://github.com/a-und-b/ComfyUI_LoRA_from_URL"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "a-und-b"
DisplayName = "ComfyUI_LoRA_from_URL"
Icon = ""
